<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".StartActivity">

    <view
        android:id="@+id/view"
        class="androidx.viewpager.widget.ViewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/view_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/app"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="229dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        android:elevation="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/logo_removebg"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/sup_title"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started_btn"
        style="@android:style/Widget.Button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/get_started_btn"
        android:elevation="95dp"
        android:onClick="getStarted"
        android:text="@string/get_started"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_user_login"
        style="@android:style/Widget.Button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/get_started_btn"
        android:elevation="95dp"
        android:onClick="userLogin"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="HardcodedText,TouchTargetSizeCheck,VisualLintButtonSize,VisualLintBounds" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="@string/register_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:text="Already have an account? Login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_started_btn"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>